// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiResizableContainer can adjust panel props 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer testClass1 testClass2 emotion-euiResizableContainer-horizontal"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:50%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiResizablePanel__content emotion-euiPanel-grow-none-transparent-euiResizablePanel__content-scrollable"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:50%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-plain-euiResizablePanel__content-scrollable"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can be controlled externally 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer testClass1 testClass2 emotion-euiResizableContainer-horizontal"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:50%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:50%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can be vertical 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer testClass1 testClass2 emotion-euiResizableContainer-vertical"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:100%;block-size:50%"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press up or down to adjust panels size"
    class="euiResizableButton euiResizableButton--vertical"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:100%;block-size:50%"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can have more than two panels 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer testClass1 testClass2 emotion-euiResizableContainer-horizontal"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:33%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:33%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      123
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:33%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      And again
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can have scrollable panels 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer testClass1 testClass2 emotion-euiResizableContainer-horizontal"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:50%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:50%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can have toggleable panels 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer testClass1 testClass2 emotion-euiResizableContainer-horizontal"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:20%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable-hasCollapsibleButton"
    >
      Sidebar
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:80%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      Sidebar content
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer testClass1 testClass2 emotion-euiResizableContainer-horizontal"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:50%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:50%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer toggleable panels can be configurable 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer testClass1 testClass2 emotion-euiResizableContainer-horizontal"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:20%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable-hasCollapsibleButton"
    >
      Sidebar
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel emotion-euiResizablePanel"
    data-position="middle"
    id="resizable-panel_generated-id"
    style="inline-size:80%;block-size:auto"
  >
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiResizablePanel__content emotion-euiPanel-grow-none-m-transparent-euiResizablePanel__content-scrollable"
    >
      Sidebar content
    </div>
  </div>
</div>
`;
